# SBOMFuzz-IDE

./: .gitignore  README.md  package-lock.json
program_a/: Cargo.toml
program_a/src/: arithmetic.rs  expr_eval.rs  lib.rs  main.rs  parser.rs  utils.rs
sbomfuzz/: CHANGELOG.md  README.md  crate_toy-rust.graph.json  package-lock.json  package.json  toy-rust_all_functions.txt  toy-rust_entry_functions.txt  toy-rust_fuzz_functions.txt  vite.config.js
sbomfuzz/frontend/: fuzzTarget.js  main.js  messaging.js
sbomfuzz/harnessGen/: code_extraction.py  generation.py  init.py  readme.md
sbomfuzz/media/: template.html  webview.css  webview.js
sbomfuzz/output/: toy-rust_all_functions.txt  toy-rust_entry_functions.txt  toy-rust_fuzz_functions.txt
sbomfuzz/public/: template.html  webview.css
sbomfuzz/src/: extension.ts  functionOutputProcesser.ts  globalContextProvider.ts  harnessGen.ts  optimize.txt  prompt.txt  rustAnalyzerStart.ts  rustFunctionCodeLensProvider.ts  util.ts  view.ts
sbomfuzz/toy-rust/: Cargo.toml  output.txt  toy-rust.cdx.json
sbomfuzz/toy-rust/fuzz/: Cargo.toml
sbomfuzz/toy-rust/fuzz/fuzz_targets/: fuzz_target_add.rs  fuzz_target_divide.rs
sbomfuzz/toy-rust/src/: create_todo.rs  lib.rs  main.rs  parser.rs
