[package]
name = "toy-rust-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
toy_rust = { package = "toy-rust", path = ".." }



[[bin]]
name = "fuzz_target_add"
path = "fuzz_targets/fuzz_target_add.rs"
test = false
doc = false
bench = false